<?xml version='1.0' encoding='utf-8'?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <string name="MM">Music Maker</string>
	<string name="b1">Kick</string>
	<string name="b2">hit hat</string>
	<string name="b3">Snare</string>
	<string name="b4">mel1</string>
	<string name="b5">mel2</string>
	<string name="b6">mel3</string>
	<string name="b7">mel4</string>
	<string name="b8">mel5</string>
	<string name="b9">mel6</string>
	<string name="b10">mel7</string>
	<string name="b11">mel8</string>
	<string name="b12">effect</string>
</resources>
