<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.test.MainActivity" >

         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/MM"
             android:textSize="30sp" 
             android:id="@+id/Dispay"
      
             />
	
   	<LinearLayout   android:layout_width="fill_parent"
    android:layout_height="90dp"
    android:orientation="horizontal"
    android:weightSum="100" >
   	
   	  		<Button
   	  		    android:id="@+id/mel1"
   	  		    android:layout_width="wrap_content"
   	  		    android:layout_height="match_parent"
   	  		    android:layout_weight="27.00"
   	  		    android:text="@string/b4" />

   	  		<Button
   	  		    android:id="@+id/mel2"
   	  		    android:layout_width="wrap_content"
   	  		    android:layout_height="match_parent"
   	  		    android:layout_weight="27.00"
   	  		    android:text="@string/b5" />
   	  		
   	  		<Button
   	  		    android:id="@+id/mel3"
   	  		    android:layout_width="wrap_content"
   	  		    android:layout_height="match_parent"
   	  		    android:layout_weight="27.00"
   	  		    android:text="@string/b6" />
	
   		</LinearLayout>
   		
   			<LinearLayout   android:layout_width="fill_parent"
    android:layout_height="90dp"
    android:orientation="horizontal"
    android:weightSum="100" >
   	
   	  		<Button
   		    android:id="@+id/mel4"
   		    android:layout_width="wrap_content"
   		    android:layout_height="match_parent"
   		    android:layout_weight="27.00"
   		    android:text="@string/b7"
   		     />

   	  		<Button
   	  		    android:id="@+id/mel5"
   	  		    android:layout_width="wrap_content"
   	  		    android:layout_height="match_parent"
   	  		    android:layout_weight="27.00"
   	  		    android:text="@string/b8" />
   	  		
   	  		<Button
   		    android:id="@+id/mel6"
   		    android:layout_width="wrap_content"
   		    android:layout_height="match_parent"
   		    android:layout_weight="27.00"
   		    android:text="@string/b9"
   		     />
	
   		</LinearLayout>
   		
   		<LinearLayout
   		    android:layout_width="fill_parent"
   		    android:layout_height="90dp"
   		    android:orientation="horizontal"
   		    android:weightSum="100" >
   	
   	  		<Button
   		    android:id="@+id/mel7"
   		    android:layout_width="wrap_content"
   		    android:layout_height="match_parent"
   		    android:layout_weight="27.00"
   		    android:text="@string/b10"
   		     />

   	  		<Button
   	  		    android:id="@+id/mel8"
   	  		    android:layout_width="wrap_content"
   	  		    android:layout_height="match_parent"
   	  		    android:layout_weight="27.00"
   	  		    android:text="@string/b11" />
   	  		
   	  		<Button
   		    android:id="@+id/mel9"
   		    android:layout_width="wrap_content"
   		    android:layout_height="match_parent"
   		    android:layout_weight="27.00"
   		    android:text="@string/b12"
   		     />
	
   		</LinearLayout>

   	  	<LinearLayout
   	  	    android:layout_width="fill_parent"
   	  	    android:layout_height="90dp"
   	  	    android:orientation="horizontal"
   	  	    android:weightSum="100" >

   	  	    <Button
   	  	        android:id="@+id/kick"
   	  	        android:layout_width="wrap_content"
   	  	        android:layout_height="match_parent"
   	  	        android:layout_weight="27.00"
   	  	        android:text="@string/b1" />

   	  	    <Button
   	  	        android:id="@+id/hit_hat"
   	  	        android:layout_width="wrap_content"
   	  	        android:layout_height="match_parent"
   	  	        android:layout_weight="27.00"
   	  	        android:text="@string/b2" />

   	  	    <Button
   	  	        android:id="@+id/snare"
   	  	        android:layout_width="wrap_content"
   	  	        android:layout_height="match_parent"
   	  	        android:layout_weight="27.00"
   	  	        android:text="@string/b3" />
   	  	</LinearLayout>

</LinearLayout>